--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engine": {
+    "node":"18"
+  },
   "scripts": {
     "dev":"tsx src/server.ts",
     "build": "tsup src",
