--- a/package.json
+++ b/package.json
@@ -3,13 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engine": {
-    "node":"18"
-  },
   "scripts": {
-    "dev":"tsx src/server.ts",
-    "build": "tsup src",
-    "start":"node dist/server.js"
+    "dev":"tsx src/server.ts"
   },
   "keywords": [],
   "author": "",
