--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engine": {
+    "node":"18"
+  },
   "scripts": {
-    "dev":"tsx src/server.ts"
+    "dev":"tsx src/server.ts",
+    "start":"node dist/server.js",
+    "build":"tsup src"
   },
   "keywords": [],
   "author": "",
